# viz

./: MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
viz/: __main__.py  cli.py  format.py  geom.py  gloss.py  histogram.py  stats.py  terminal.py  text.py
