[metadata]
name = viz
version = 0.0.5
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/viz
keywords = console terminal data visualization plot histogram
description = Data visualization in the terminal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
  Development Status :: 3 - Alpha
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Topic :: Text Processing :: General

[options]
packages = find:
install_requires =
  numpy

[options.entry_points]
console_scripts =
  viz = viz.__main__:main
